GNOME Bugzilla – Bug 759537
dashdemux: clock compensation: clock_cond is not used and should be removed
Last modified: 2015-12-16 10:47:12 UTC
There are no threads waiting on clock_cond. It is just initialized and signaled. It should be removed.
Created attachment 317491 [details] [review] proposed patch
commit f85fc4a5432a7ad887cfec8cade6e197656171a9 Author: Florin Apostol <florin.apostol@oregan.net> Date: Wed Dec 16 10:41:47 2015 +0000 dashdemux: clock_cond is not used and should be removed There are no threads waiting on clock_cond. It is just initialised and signalled. It should be removed. https://bugzilla.gnome.org/show_bug.cgi?id=759537